# ledger-nanos-ui

./: Cargo.toml
.cargo/: config.toml
examples/: gadgets.rs
src/: bagls.rs  bitmaps.rs  layout.rs  lib.rs  screen_util.rs  se_bagls.rs  string_mcu.rs  string_se.rs  ui.rs
src/bagls/: mcu.rs  se.rs
