[package]
name = "nanos_ui"
version = "0.2.0"
authors = ["yhql"]
edition = "2021"

[dependencies]
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk" } 
include_gif = { git = "https://github.com/LedgerHQ/sdk_include_gif" }

[features]
speculos = ["nanos_sdk/speculos"]

# This section is not necessary to build the package
# it is only used to be able to do 
# `cargo ledger nanos -- --example gadgets`
[package.metadata.nanos]
curve = "secp256k1"
flags = "0"
icon = "ui_16x16.gif"
icon_small = "ui_14x14.gif"
path = ""